--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 		<script src="resources/js/curl-to-java.js"></script>
 		<link rel="stylesheet" href="resources/css/color-brewer.css">
 		<link rel="stylesheet" href="resources/css/common.css">
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-9829687-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-9829687-3');
+</script>
+
 	</head>
 	<body>
 
@@ -48,4 +58,5 @@
 		</footer>
 
 	</body>
+	　
 </html>
